--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/registrar-seguimiento-cronograma/registrar-seguimiento-cronograma.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/registrar-seguimiento-cronograma/registrar-seguimiento-cronograma.component.scss
@@ -45,3 +45,16 @@
     transform: translateY(10px);
   }
 }
+
+.select-width-2 {
+  width: 8em;
+  display: flex;
+  .field {
+    max-width: calc(100% - 2em);
+    margin-right: auto;
+  }
+}
+
+.position-relative {
+  position: relative;
+}
