--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/registrar-liquidacion-contrato/registrar-liquidacion-contrato.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/registrar-liquidacion-contrato/registrar-liquidacion-contrato.component.html
@@ -39,7 +39,7 @@
                 </mat-panel-title>
             </mat-expansion-panel-header>
 
-            <app-tabla-en-proceso-de-firmas-rlc *ngIf="listaAcordeonEnProcesoFirma.length > 0"></app-tabla-en-proceso-de-firmas-rlc>
+            <app-tabla-en-proceso-de-firmas-rlc *ngIf="listaAcordeonEnProcesoFirma.length > 0" [listaAcordeonEnProcesoFirma]="listaAcordeonEnProcesoFirma"></app-tabla-en-proceso-de-firmas-rlc>
         </mat-expansion-panel>
 
         <mat-expansion-panel class="expansion-style">
