--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/tabla-liquidacion-rlc/tabla-liquidacion-rlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/tabla-liquidacion-rlc/tabla-liquidacion-rlc.component.html
@@ -7,41 +7,48 @@
         <img src="assets/img/icon/lupa.svg" alt="Buscar">
     </button>
 </div>
+
 <div class="tabla-expansion-panel">
     <table mat-table [dataSource]="dataSource" matSort class="tabla mat-elevation-z8 text-center">
 
         <ng-container matColumnDef="fechaSolicitud">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de la solicitud </th>
-            <td mat-cell *matCellDef="let element"> <b>{{element.fechaSolicitud}}</b> </td>
+            <td mat-cell *matCellDef="let element"> <b>{{ element.fechaSolicitud }}</b> </td>
         </ng-container>        
         <ng-container matColumnDef="numeroSolicitud">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de la solicitud </th>
-            <td mat-cell *matCellDef="let element"> <em>{{element.numeroSolicitud}}</em> </td>
+            <td mat-cell *matCellDef="let element"> <em>{{ element.numeroSolicitud }}</em> </td>
         </ng-container>
         <ng-container matColumnDef="numeroContrato">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Número del contrato </th>
-            <td mat-cell *matCellDef="let element"> <em>{{element.numeroContrato}}</em> </td>
+            <td mat-cell *matCellDef="let element"> <em>{{ element.numeroContrato }}</em> </td>
         </ng-container>
         <ng-container matColumnDef="tipoContrato">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Tipo de contrato </th>
-            <td mat-cell *matCellDef="let element"> <em>{{element.tipoContrato}}</em> </td>
+            <td mat-cell *matCellDef="let element"> <em>{{ element.tipoContrato }}</em> </td>
         </ng-container>
         <ng-container matColumnDef="estadoRegistro">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado del registro </th>
             <td mat-cell *matCellDef="let element"> 
-                <span class="info-text info-text__table" [ngClass]="{'sin-diligenciar' : element.estadoRegistro=='Incompleto', 'completo' : element.estadoRegistro=='Completo'}"></span>
-                {{element.estadoRegistro}} </td>
+                <span   class="info-text info-text__table"
+                        [ngClass]="{'sin-diligenciar' : element.registroCompleto === false, 'completo' : element.registroCompleto === true}">
+                </span>
+                {{element.registroCompleto === true ? 'Completo' : 'Incompleto' }}
+            </td>
         </ng-container>
         <ng-container matColumnDef="estadoDocumento">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Esatdo del documento </th>
-            <td mat-cell *matCellDef="let element"> <em>{{element.estadoDocumento}}</em> </td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado del documento </th>
+            <td mat-cell *matCellDef="let element"> <em>{{ element.nombreEstado }}</em> </td>
         </ng-container>
         <ng-container matColumnDef="gestion">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
             <td mat-cell *matCellDef="let element">
-                <button mat-raised-button color="accent" class="btn-table"
-                (click)="this.verDetalleSolicitud(element.id)">
-                Ver detalle</button>
+                <button mat-raised-button
+                        color="accent"
+                        class="btn-table"
+                        [routerLink]="[ 'verDetalleSolicitud', element.contratoId ]">
+                        Ver detalle
+                </button>
             </td>
         </ng-container>
 
@@ -50,4 +57,3 @@
     </table>
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
 </div>
-
