fix lista liquidados 5.4.2

--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/registrar-liquidacion-contrato/registrar-liquidacion-contrato.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/registrar-liquidacion-contrato/registrar-liquidacion-contrato.component.html
@@ -49,7 +49,7 @@
                 </mat-panel-title>
             </mat-expansion-panel-header>
 
-            <app-tabla-liquidacion-rlc *ngIf="listaAcordeonLiquidado.length > 0"></app-tabla-liquidacion-rlc>
+            <app-tabla-liquidacion-rlc *ngIf="listaAcordeonLiquidado.length > 0" [listaAcordeonLiquidado]="listaAcordeonLiquidado"></app-tabla-liquidacion-rlc>
         </mat-expansion-panel>
     </mat-accordion>
 </div>
